# Ouroboros

./: .gitignore  AETHEL_METACUBE.json  AIOSPANDORA  AIOSPANDORA_INTEGRATION_MANUSCRIPT.md  AI_INTEGRATION_SUMMARY.md  ANDROID_RUSTORACLE_SUMMARY.md  APEX_MANTLE.py  ARCHITECTURE.md  BLACKCORE_PRIME.py  BLACKCORE_chronofractal_drone_v3.py  BLACK_CORE_KERNEL1.11.25.18.py  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  E8Kuramoto.py  FALSIFIABILITY_AUDIT.md  GGCC_EQUILIBRIUM_SEAL.md  GGCC_PHASE3_DEPLOYMENT.md  Hallucination-Resistant Inference Core  HeartbeatTest.swift  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ADVANCED.md  IMPLEMENTATION_SUMMARY_CRUCIBLE.md  IMPLEMENTATION_SUMMARY_UOF.md  INTEGRATION_SUMMARY.md  LICENSE  LOLD_README.md  MAGNETAR_COHERENCE_ENGINE_README.md  MANIFEST.sha256  MASTERSTACK_KERNEL_v2.0.kernel  MASTER_COMPILER_MANUAL.md  METHODOLOGY.md  MYCELIAL_BRIDGE_SUMMARY.md  Makefile  OUROBOROS_DELTA_MANUSCRIPT.md  OUROBOROS_MANUSCRIPT_DATA.md  PR36_FIX_VERIFICATION.md  PR36_REBASE_ANALYSIS.md  Quillan_Ronin_v88_Apex.py  README.md  REPLICATION_RECEIPT_TEMPLATE.md  (+51 more)
.cargo/: config.toml
ABRAXIS/: CANONICAL_PROGRESSION.md  Dockerfile  INDEX.md  README.md  __init__.py  eden_ecs_bridge.py
Config/: UniversalMinimum.ini
EDEN-ECS/: README.md  __init__.py  test_balance_system.py  test_core.py  test_loyalty_enhanced.py  test_memory.py  test_metacube.py  test_new_components.py  test_quantum.py
ELPIS/: ARCHITECTURE.md  ELPIS-GEODESIC-BRIDGE.md  ELPIS-ISA.md  ELPIS-VCORE.md  Elpis.java  README.md  bootstrap_system_files.md  documentation.md
ELPIS/METACUBE/forge_standalone/: Cargo.toml  README.md
ELPIS/METACUBE/forge_standalone/src/: consensus.rs  ffi.rs  lib.rs  sync.rs
ELPIS/METACUBE/universal-reliability-crucible/: Cargo.toml  README.md
ELPIS/METACUBE/universal-reliability-crucible/.github/: PULL_REQUEST_TEMPLATE.md
ELPIS/METACUBE/universal-reliability-crucible/.github/workflows/: universal_reliability_gate.yml
METACUBE_BLUEPRINT/: README.md  panthetic_system.py
README/: ECS.md  LIMA.md  LINUX.md  MACOS.md  README.md  TERMINAL.md
agent_interface/: recursive_crucible.py
android-rustoracle/: .gitignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST.md  QUICKSTART.md  README.md  VALIDATION_GUIDE.md  build-rust.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android-rustoracle/rustoracle/: Cargo.toml
android-rustoracle/rustoracle/examples/: demo.rs
android-rustoracle/rustoracle/src/: lib.rs
arc_agi_2_swarm/: __init__.py  abstraction_library_seed.json  dsl_primitives.py  evolutionary_swarm.py  fitness_evaluator.py  repl_agent_scaffold.py
arc_agi_3/: __init__.py  engram_observatory.py  interactive_reasoning_env.py  policy_gradients.py
archive/: README.md  emergent_symbols_(Φ_Ψ_Ξ).txt  magnetar_timelines.txt  primal_resonances_(ॐ).txt  quantum_linguistics.txt  tesla-schumann_integrations.txt  translator_prototype.txt
cathedral/: README.md  constitution.md
compliance/: FMEA_TEMPLATES.md  NIST_CSF_MAPPING.md  PQC_ALIGNMENT.md  THREAT_MODELS.md
components/: loyalty.py  metacube.py
core/: entity.py  system.py  world.py
docs/: ADVANCED_FEATURES.md  ADVANCED_SYSTEMS.md  APP_STORE_COMPLIANCE.md  ARCHITECTURE.md  CODEX_REACTOR.md  DEMO_GIGGLE_FOREST_BLUEPRINT_SPEC.md  DNA_HELIX_MAGNETAR_SYNTHESIS.md  GIGGLE_FOREST_RITUAL.md  IMPLEMENTATION.md  IOS_OPTIMIZATION_DEBRIEF.md  LOCAL_INFERENCE_SPINE_PLAN.md  OPTIMIZATION_STRATEGY.md  OS_AI_BOUNDARY.md  RECURSIVE_CRUCIBLE_README.md  ROUND3_RELEASE_NOTES.md  ROUND3_SYMCHAOS_CRUCIBLE.md  SYMBIONT_LORE_SPEC.md  adapter_patterns.md  convergence_detection.md  cross_repo_tracing.md  design_notes.md  ecs_vectorization.md  fabric_core_integration.md  ggccd_framework.md  manuscript_validation.md  memory_optimization.md  observer-dashboard.html  progress_summary.md  rosetta_translator.md  thread_management.md
ecs/: __init__.py  manuscript_validator.py  orchestrator.py  runtime_vectorizer.py
eden_ecs/: Cargo.toml  balance_test.json  run_all_tests.sh  test_balance_system.py  test_core.py  test_history.json  test_loyalty_enhanced.py  test_memory.py  test_metacube.py  test_new_components.py  test_quantum.py  test_timestep.py
eden_ecs/benches/: spatial_grid.rs
eden_ecs/components/: __init__.py  memory.py  palindrome.py  quantum.py
eden_ecs/core/: __init__.py  constants.py  entity.py  world.py
eden_ecs/docs/: PERFORMANCE_REPORT.md
eden_ecs/examples/: demo_long.py  sakib_ab.rs  sakib_aba.rs
eden_ecs/simulation_output_20260214_204710/: history.json
eden_ecs/src/: diagnostics.rs  ffi_f16.rs  lib.rs  sovereign_inference.rs  spatial_grid.rs  telemetry_ffi.rs  tracy.rs  weaver.rs
eden_ecs/src/api_vpn/: mod.rs
eden_ecs/src/vpn/: crypto.rs  health.rs  mod.rs  observability.rs  retry.rs  tests.rs
eden_ecs/systems/: __init__.py  coherence_accumulator_system.py  palindrome_descent_system.py  ternary_register_system.py  veto_system.py
eden_ecs/tests/: __init__.py  api_vpn_integration.rs  test_coherence_accumulator.py  test_palindrome.py  test_ternary_register.py  test_veto_system.py  vpn_integration.rs  weaver_test.rs
eden_ecs/tools/: cosmic_coder.py
engine_modules/: README.md  __init__.py  magnetar_elastic_coherence_engine.py
examples/: advanced_systems_demo.py  complete_integration.py  devops-incident-deck.json  dna_helix_magnetar_demo.py  ggccd_examples.py  magnetar_coherence_examples.py  medguide-triage-deck.json  policy-strict.json  recursive_crucible_integration.py  rosetta_examples.py
experiments/: __init__.py  orthogonal_mlp_latency_test.py  telemetry_observer.py  topology_control_testbed.py
geodesic_mycelium_agent/: README.md  __init__.py  __main__.py  agent.py  cli.py
ggccd/: __init__.py  framework.py  lexicon.py
governance/: CONFLICT_RESOLUTION.md  DECISION_FRAMEWORK.md  PROJECT_CONSTITUTION.md  SUCCESSION_PROTOCOL.md
gui/: conductor_gui.py  crucible_tab.py
hardware/: ICARUS_LATCH_POC.md  MACHXO2_KILLSWITCH_SPEC.md  simulated_killswitch.py
heavyforge/: __init__.py  authority.py  boot.py  contracts.py  diagnostics.py  enums.py  judge.py  kernel.py  ledger.py  worker.py  (+7 more)
(+420 files in other folders)
