[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "pyyaml>=6.0",
    "plotly>=5.0.0",
    "websockets>=12.0",
    "rich>=13.0.0",
    "psutil>=5.8.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
]

[project.scripts]
ouroboros = "ouroboros.cli:main"
heavyforge-diagnostics = "heavyforge.cli.diagnostics_cli:main"
kaskal-codegov = "heavyforge.codegov.cli:main"

[tool.setuptools.packages.find]
include = ["ouroboros*", "eden_ecs*", "ABRAXIS*", "heavyforge*"]
exclude = ["archive*", "tests*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]