[package]
name = "eden_ecs"
version = "0.1.0"
authors = ["AIOSPANDORA Development Team"]
edition = "2021"
description = "EDEN Entity-Component-System — zero-copy telemetry FFI bridge"
license = "MIT"
repository = "https://github.com/AIOSPANDORA/Ouroboros"

[lib]
name = "eden_ecs"
crate-type = ["cdylib", "rlib"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
